# RTCast

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: Config.cmake.in
include/rtcast/: ConnectionMode.h  DataStream.h  SDPMsg.h  Signaler.h
src/: CMakeLists.txt  DataStream.cpp  DataStream.h  SDPMsg.cpp  SDPMsg.h  Signaler.cpp  Signaler.h
test/: CMakeLists.txt  MockWebSocket.h  SDPMsgTest.cpp  SignalerTest.cpp
